# vagabot

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  test.py
src/agents/: workflow.py
src/api/: app.py
src/config/: model_config.yaml  settings.py
src/prompts/: system_prompt.py
src/tools/: currency_converter.py  expense_calculator.py  place_search.py  weather_info.py
src/utils/: currency_service.py  expense_calc_service.py  model_loader.py  place_info_service.py  weather_service.py
vagabot-frontend/: package-lock.json  package.json
vagabot-frontend/app/: page.tsx
