[project]
name = "vagabot"
version = "0.1.0"
description = "A stateful AI travel agent powered by LangGraph"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "python-dotenv>=1.0.1",
    "tavily-python>=0.3.3",
    "langchain-groq>=1.1.2",
    "fastapi>=0.135.2",
    "starlette>=1.0.0",
    "streamlit>=1.55.0",
    "langchain-tavily>=0.2.17",
    "langchain-google-community[places]>=3.0.5",
    "uvicorn>=0.42.0",
]

[tool.setuptools]
packages = ["src"]
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
